--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "license": "ISC",
   "description": "Recipe application",
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.15.2",
-    "parcel": "^2.15.2"
+    "@parcel/transformer-inline-string": "^2.15.4",
+    "@parcel/transformer-sass": "^2.15.4",
+    "parcel": "^2.15.4"
   },
   "dependencies": {
     "core-js": "^3.43.0",
