--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html --dist-dir ./dist --public-url / && cp src/img/icons.svg dist/icons.svg"
+    "build": "parcel build index.html --dist-dir ./dist --public-url ./ --no-optimize && cp src/img/icons.svg dist/icons.svg"
+
   },
   "keywords": [],
   "author": "",
